<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_item_photo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/profile"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="30dp"
            android:layout_gravity="center"/>

        <TextView
            style="@style/TextContent.Title.Large"
            android:gravity="center"
            android:layout_marginBottom="8dp"
            android:text="@string/user_name"/>

        <TextView
            style="@style/TextContent"
            android:textSize="16dp"
            android:gravity="center"
            android:text="@string/user_job"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="16dp">
            <TableRow
                style="@style/TableRow.About"
                android:layout_marginBottom="8dp">

                <ImageView
                    android:id="@+id/icon_birthday"
                    android:src="@drawable/ic_baseline_calendar_24"
                    android:layout_height="24dp"
                    android:layout_width="24dp"
                    android:layout_marginRight="16dp"/>

                <TextView
                    android:id="@+id/tv_birthday"
                    style="@style/TextContent"
                    android:textSize="14sp"
                    android:layout_weight="1"
                    android:text="@string/user_birthday" />
            </TableRow>
            <TableRow
                style="@style/TableRow.About"
                android:layout_marginBottom="8dp">

                <ImageView
                    android:id="@+id/icon_location"
                    android:src="@drawable/ic_baseline_location_on_24"
                    android:layout_height="24dp"
                    android:layout_width="24dp"
                    android:layout_marginRight="16dp"
                    />

                <TextView
                    android:id="@+id/tv_location"
                    style="@style/TextContent"
                    android:textSize="14sp"
                    android:layout_weight="1"
                    android:text="@string/user_location" />
            </TableRow>

            <TableRow
                style="@style/TableRow.About">

                <ImageView
                    android:id="@+id/icon_email"
                    android:src="@drawable/ic_baseline_email_24"
                    android:layout_height="24dp"
                    android:layout_width="24dp"
                    android:layout_marginRight="16dp"
                    />

                <TextView
                    android:id="@+id/tv_email"
                    style="@style/TextContent"
                    android:textSize="14sp"
                    android:layout_weight="1"
                    android:text="@string/user_email" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</ScrollView>